syntax = "proto3";

message NetworkMetrics{
  /*
        1 - 16 are the transfer metrics. It is generated by some computation using the
        values generated using "ss -t -i state ESTABLISHED dst [dst-ip];" command.
        The line which is parsed to generate the following fields is given below:

        Recv-Q       Send-Q                           Local Address:Port                             Peer Address:Port
        0            5814120                [::ffff:134.197.113.70]:36662                 [::ffff:134.197.113.71]:50505         users:(("java",pid=12466,fd=16))
        htcp wscale:13,13 rto:204 rtt:0.224/0.045 mss:1448 pmtu:1500 rcvmss:536
        advmss:1448 cwnd:456 ssthresh:424 bytes_acked:17599506586 segs_out:12192101
        segs_in:129549 data_segs_out:12192099 send 23581.7Mbps lastrcv:18044 pacing_rate 28298.1Mbps
        delivery_rate 7348.1Mbps busy:18024ms rwnd_limited:17584ms(97.6%) unacked:176 retrans:0/244
        reordering:174 rcv_space:14480 rcv_ssthresh:42242 notsent:5560320 minrtt:0.029
    */
  optional float avg_rtt_value = 1;
  optional float pacing_rate = 2; //p_avg_value
  optional float cwnd_rate = 3; //avg_cwnd_value
  optional float avg_retransmission_timeout_value = 4; //avg_rto_value
  optional float byte_ack = 5;
  optional float seg_out = 6;
  optional float retrans = 7; //retransmission ***
  optional float mss_value = 8; //avg_mss_rate
  optional float ssthresh_value = 9; //avg_ssthresh_value
  optional float segs_in = 10;
  optional float avg_send_value = 11;
  optional float unacked_value = 12; //unacked packets ***
  optional float rcv_space = 13; //avg_rcv_space
  optional float send_buffer_value = 14; //***
  optional float avg_dsack_dups_value = 15;
  optional float avg_reord_seen = 16;
}